# openrelik-worker-template

./: Dockerfile  README.md  Tiltfile  bootstrap.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-test.yaml  python-test.yml
src/: app.py  tasks.py
tests/: test_tasks.py
